fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body {
   background-color: #D9A066;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   color: #663931;
